added feature to move folders to a folder of "Folders"